# talons

./: .gitignore  Makefile.am  README.md  autogen.sh  claws-features.h.in  claws-mail.pc.in  configure.ac
doc/man/: claws-mail.1
src/: Makefile.am  account.c  account.h  action.c  action.h  adbookbase.h  addr_compl.c  addr_compl.h  addrbook.c  addrcache.c  addrcache.h  addrclip.c  addrcustomattr.c  addrdefs.h  addrduplicates.c  addressadd.c  addressadd.h  addressbook.c  addressbook.h  addressbook_foldersel.c  addressitem.h  addrgather.c  addrgather.h  addrharvest.c  addrharvest.h  addrindex.c  addrindex.h  addritem.c  addritem.h  addrmerge.c  addrquery.c  addrquery.h  addrselect.c  advsearch.c  alertpanel.c  autofaces.c  avatars.c  build.zig  build.zig.zon  compose.c  (+155 more)
src/common/: Makefile.am  claws.c  codeconv.c  codeconv.h  defs.h  file-utils.c  file-utils.h  hooks.c  log.c  log.h  mgutils.c  mgutils.h  prefs.c  prefs.h  progressindicator.c  proxy.c  quoted-printable.c  session.c  session.h  smtp.c  smtp.h  socket.c  socket.h  ssl.c  ssl.h  ssl_certificate.c  ssl_certificate.h  string_match.c  stringtable.c  tags.c  tags.h  template.c  unmime.c  utils.c  utils.h  uuencode.c  xml.c  xmlprops.c
src/common/tests/: Makefile.am
src/etpan/: Makefile.am  etpan-errors.h  etpan-ssl.c  etpan-ssl.h  etpan-thread-manager.c  imap-thread.c  imap-thread.h  nntp-thread.c
src/fence/: Makefile  build.zig  build.zig.zon  root.zig  tlds.zig
src/fence/src/: fence.h  root.zig
src/gtk/: Makefile.am  about.c  combobox.c  description_window.c  filesel.c  foldersort.c  gtkcmclist.c  gtkcmctree.c  gtksctree.c  gtksctree.h  gtkunit.c  gtkutils.c  gtkutils.h  gtkvscrollbutton.c  icon_legend.c  inputdialog.c  logwindow.c  logwindow.h  manage_window.c  menu.c  menu.h  prefswindow.c  progressdialog.c  quicksearch.c  w32_filesel.c
